2009-08-10 20:05 adburton

	* AUTHORS, src/about.c: Update translator-credits string, add entry to
	  AUTHORS for translations migrated from GXMame

2009-08-01 19:35 adburton

	* src/: mame_options_legacy.c, mame_options_legacy_dialog.c: Set default
	  values for bufsize, flipx and flipy, set volume as an integer value not a
	  float, load doubles using g_key_file_get_double, not _get_integer.
	  All changes affect XMAME only.

2009-08-01 16:40 adburton

	* src/gmameui-gamelist-view.c: Remove redundant gtk_progressbar_pulse call
	* src/directories.c: Search for SDLMAME executable in $PATH if no
	  executables exist

2009-07-31 18:24 adburton

	* gmameui.desktop.in: Updated .desktop.in file to remove deprecated items as
	  per Freedesktop specifications

2009-07-31 18:05 adburton

	* data/main_gui.glade: Delete redundant main window Glade file
	* data/: Makefile.am, filter_bar.glade: Add new Glade file to support the filter bar
	* src/: Makefile.am, game_list.c, gmameui-gamelist-view.c,
	  gmameui-statusbar.c, gmameui-statusbar.h, gmameui.c, gui.h, interface.c,
	  interface.h, io.c: Add new object for statusbar, show progressbar in
	  statusbar when loading gamelist from startup and auditing ROMs after
	  gamelist rebuild
	* po/POTFILES.in: Update source files for translations

2009-07-27 21:00 adburton

	* src/: callbacks.c, callbacks.h, game_list.c, game_list.h,
	  gmameui-gamelist-view.c, gmameui-gamelist-view.h, gmameui.c, gui.c,
	  interface.c, interface.h: Load gamelist and populate gamelist view after
	  GUI is displayed, automatically trigger audit after gamelist rebuild is
	  performed, update gamelist view as audit is occurring

2009-07-25 15:50 adburton

	* data/main_gui.glade, src/: callbacks.c, gmameui-audit-dlg.c,
	  gmameui-gamelist-view.c, gmameui-gamelist-view.h, gmameui-ui.xml, gui.c,
	  gui.h, interface.c, interface.h: Initiate audit after gamelist is rebuilt.
	  UI changes: radio choice between ListView and ListDetailsView is now a